--- a/src/chrome/vocabulary/vocabulary.html
+++ b/src/chrome/vocabulary/vocabulary.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="./options.js"></script>
+  <script type="text/javascript" src="./vocabulary.js"></script>
 </body>
 
 </html>
